fix double scrollbar

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -92,7 +92,8 @@ $gap: 64px
 $tablet: 769px
 $desktop: 960px + (2 * $gap)
 $widescreen: 1152px + (2 * $gap)
-$fullhd: 1544px + (2 * $gap)
+// $fullhd: 1544px + (2 * $gap)
+$fullhd: 1344px + (2 * $gap)
 
 // Columns
 $column-gap: 0.75em
