--- a/src/sass/modules/_base.sass
+++ b/src/sass/modules/_base.sass
@@ -1,31 +1,24 @@
 @import '../variables'
 
-body, #loader
+#loader
   height: 100%
   width: 100%
   position: fixed
   top: 0
+
+body
+  background: linear-gradient($darkSmoke, $snow)
   @media screen and (min-width: $fullhd)
     font-size: 1vw
 
-body
-  background: linear-gradient($extraDarkSnow, $snow)
-
-p
-  opacity: 0.75
-
-#app
-  position: absolute
+#canvas
+  position: fixed
   top: 0
   left: 0
   right: 0
   bottom: 0
-  overflow-y: scroll
-  overflow-x: hidden
-
-#canvas
   transform: scale3D(1.1, 1.1, 1.1)
-  filter: blur(1em)
+  filter: blur(1.5em)
   @media screen and (min-width: $fullhd)
     filter: blur(2em)
 // #canvas
@@ -44,3 +37,6 @@ p
 
 h1, h2, h3, h4, h5, h6
   font-family: $family-display
+
+p
+  opacity: 0.75
