--- a/src/sass/modules/_hero-override.sass
+++ b/src/sass/modules/_hero-override.sass
@@ -1,6 +1,9 @@
 @import '../variables'
 
 .container
+  @media screen and (min-width: $desktop)
+    max-width: 80%
+    width: 80%
   @media screen and (min-width: $widescreen)
     max-width: 75%
     width: 75%
